--- a/styles.css
+++ b/styles.css
@@ -15,19 +15,23 @@ body {
     background-color: lightblue;
 }
 
-.book-shelf {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: max-content;
+.main {
     background-color: #f0eef1;
-    padding: 20px;
-    gap: 30px;
     flex: 1;
 }
 
 .add-book {
     justify-self: center;
-    grid-column: 1 / -1;
+    margin: 20px;
+}
+
+.book-shelf {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: max-content;
+    padding: 0 30px;
+    gap: 30px;
+    flex: 1;
 }
 
 .book-card {
@@ -45,4 +49,10 @@ body {
     display: flex;
     justify-content: center;
     background-color: beige;
+}
+
+.modal-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
