--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,12 @@ body {
 
 .add-book {
     justify-self: center;
-    margin: 20px;
+    margin: 30px;
 }
 
 .book-shelf {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: max-content;
     padding: 0 30px;
     gap: 30px;
