--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,11 @@ body {
     height: 200px;
 }
 
+.book-card > * {
+    margin: 0;
+    padding: 0;
+}
+
 .footer {
     display: flex;
     justify-content: center;
