--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
+* {
+    font-family: "Roboto", "sans-serif";
+}
+
 body {
     margin: 0;
     padding: 0;
+}
+
+button {
+    cursor: pointer;
 }
 
 .container {
@@ -12,11 +20,12 @@ body {
 .header {
     display: flex;
     justify-content: center;
-    background-color: lightblue;
+    background-color: #9307ff;
+    color: white;
 }
 
 .main {
-    background-color: #f0eef1;
+    background-color: #212529;
     flex: 1;
 }
 
@@ -27,7 +36,7 @@ body {
 
 .book-shelf {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-auto-rows: max-content;
     padding: 0 30px;
     gap: 30px;
@@ -37,12 +46,14 @@ body {
 .book-card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
     border-radius: 15px;
+    border: 1px solid gray;
     background-color: white;
     padding: 15px;
     gap: 10px;
-    height: 200px;
+    height: 250px;
 }
 
 .book-card > * {
@@ -50,14 +61,89 @@ body {
     padding: 0;
 }
 
+.btn-show-modal {
+    padding: 10px 30px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 20px;
+    background-color: transparent;
+    color: white;
+    transition: 0.3s;
+}
+
+.btn-show-modal:hover {
+    background-color: #363d43;
+}
+
+.btn-delete {
+    align-self: flex-end;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: none;
+    background-color: transparent;
+    color: #dc3545;
+}
+
 .footer {
     display: flex;
     justify-content: center;
-    background-color: beige;
+    background-color: #2b3035;
+    color: white;
+}
+
+.modal-container {
+    border: none;
+    border-radius: 10px;
 }
 
 .modal-form {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+    gap: 10px;
+}
+
+.modal-form > * {
+    font-size: 1.3rem;
+}
+
+.modal-form > label {
+    font-weight: bold;
+}
+
+.modal-buttons {
+    display: flex;
+    gap: 24px;
+}
+
+.modal-buttons > button {
+    font-size: 1.3rem;
+}
+
+.btn-read,
+.modal-buttons > button {
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.btn-submit {
+    background-color: #28a745;
+}
+
+.btn-cancel {
+    background-color: #dc3545;
+}
+
+.btn-read {
+    background-color: #9307ff;
+}
+
+.btn-read:hover {
+    background-color: #9307ffcb;
 }
